Update RDQ Converter, to load almost rewards correctly, update RDT